@@ -1,3 +1,8 @@
+2005-03-03  Marc Singer  <elf@buici.com>
+
+	* src/lib/zlib.c: Added zlib decompressor.  Modified code to
+	comply with data section standards of APEX.
+
 2005-02-24  Marc Singer  <elf@buici.com>
 
 	* src/mach-ixp42x/initialize.c: detection of the chip size from
